[metadata]
name = nicls
version = 0.0.1
author = Connor Keane
author_email = kahana-sasysadmin@sas.upenn.edu
description = server to interface between UnityEPL tasks and BioSemi software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pennmem/NICLS
project_urls =
    Bug Tracker = https://github.com/pennmem/NICLS/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9